<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="100dp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:fontFamily="@string/aboutalc"
            android:textSize="35sp"
            android:text="@string/welcome_to_alc_4_0"/>

        <Button
            android:id="@+id/aboutAlc"
            style = "@style/Button"
            android:text="@string/aboutalc"
            android:background="#FFA500"/>


        <Button
            android:id="@+id/profile"
            style="@style/Button"
            android:text="@string/myprofile"
            android:background="#FFA500"/>


    </LinearLayout>
</ScrollView>